# agentworks

./: .gitignore  README.md  index.html  package.json
src/: AgentManager.tsx  App.tsx  PermissionDialog.tsx  TaskScheduler.tsx  index.css
src-tauri/: Cargo.toml  agents.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  analyzer.rs  filesystem.rs  graph_api.rs  main.rs  ollama.rs  scheduler.rs  session.rs  storage.rs
src/components/: FileDetailPanel.tsx  FileList.tsx  LoginScreen.tsx  Sidebar.tsx
src/config/: authConfig.ts
src/services/: graphService.ts
src/types/: index.ts
